--- a/frontend/package.json
+++ b/frontend/package.json
@@ -43,6 +43,7 @@
     "cmdk": "1.0.4",
     "date-fns": "^3.0.0",
     "embla-carousel-react": "8.5.1",
+    "google-auth-library": "^9.15.1",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
     "react": "^18.2.0",
