--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,7 @@
     "seed": "node seeder.js"
   },
   "dependencies": {
+    "axios": "^1.8.4",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^1.37.3",
     "cors": "^2.8.5",
@@ -17,6 +18,8 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
+    "google-auth-library": "^9.15.1",
+    "googleapis": "^129.0.0",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.4.1",
     "multer": "^1.4.5-lts.1",
